//
//  FilterView.swift
//  CSKPrototype
//
//  Created by Mark Bailey on 24/03/2020.
//  Copyright © 2020 MPD Bailey Technology. All rights reserved.
//

import SwiftUI

struct FiltersView: View {
    @Environment(AppViewModel.self) var appVM
    @State var keyboard = Keyboard()
    @Bindable var filters : Filters
    
    init(filters : Filters){
        self.filters = filters
    }

    private let numberFilters = ["No filter", "1 letter", "2 letters", "3 letters", "4 letters", "5 letters", "6 letters", "7 letters", "8 letters", "9 letters", "10 letters", "11 letters", "12 letters", "13 letters", "14 letters", "15 letters", "16 letters", "17 letters", "18 letters", "19 letters", "20 letters"]
    private let distinctFilters = ["No filter", "All letters are different", "Some letters are the same"]
    
    private var status : some View {
        Section(footer: Text("Set up you filters below and then press Apply to perform a filtered search.")){
            let filterCount = filters.filterCount
            HStack {
                if filterCount != 0 {
                    Image(systemName: "info.triangle")
                        .foregroundColor(Color("iconYellow"))
                        .padding([.leading,.trailing],4)
                        .symbolEffect(.bounce, options: .repeating)

                }
                if filterCount == 1{
                    Text("1 filter set")
                } else if filterCount == 0 {
                    Text("No filters set")
                } else {
                    Text("\(filters.filterCount) filters set")
                }
                Spacer()
                Button(action: filters.reset){
                    Text("CLEAR")
                        .modifier(ButtonMod())
                }.buttonStyle(BorderlessButtonStyle())
            }
        }

    }
    
    
    private var letterFilters : some View {
        Section(header: Text("FILTER BY LETTERS"), footer: Text("Letters can be in any order here")){
            TextFilterRow(label: "Contains", hint: "Enter letters", text: $filters.contains)
                .filterBadge(show: !filters.contains.isEmpty)
            TextFilterRow(label: "Excludes", hint: "Enter letters", text: $filters.excludes)
                .filterBadge(show: !filters.excludes.isEmpty)
            FilterPicker(label: "Distinct", values: distinctFilters, selection: $filters.distinctSelection)
                .filterBadge(show: filters.distinctSelection != Filters.NOT_SET)
        }
    }
    
    private var wordFilters : some View {
        Section(header: Text("FILTER BY WORDS"), footer: Text("Find results that contain or exclude a word. Split multiple words with spaces, eg 'st ing'")){
            TextFilterRow(label: "Contains Word", hint: "Enter word", text: $filters.containsWord)
                .filterBadge(show: !filters.containsWord.isEmpty)
            TextFilterRow(label: "Excludes Word", hint: "Enter word", text: $filters.excludesWord)
                .filterBadge(show: !filters.excludesWord.isEmpty)
        }
    }
    
    private var prefixSuffixFilters : some View {
        Section(header: Text("PREFIX / SUFFIX"), footer: Text("Find results starting or ending with your specified letters. Press the switches for NOT.")){
            Toggle(isOn: $filters.isStartingWithNotEnabled) {
                if filters.isStartingWithNotEnabled {
                    Text("Not Starting With")
                } else {
                    Text("Starting With")
                }
            }.modifier(ToggleMod())
            TextFilterRow(label: "Prefix", hint: "Enter prefix", text: $filters.prefix)
                .filterBadge(show: !filters.prefix.isEmpty)

            Toggle(isOn: $filters.isEndingWithNotEnabled) {
                if filters.isEndingWithNotEnabled {
                    Text("Not Ending With")
                } else {
                    Text("Ending With")
                }
            }.modifier(ToggleMod())
            TextFilterRow(label: "Suffix", hint: "Enter suffix", text: $filters.suffix)
                .filterBadge(show: !filters.suffix.isEmpty)
        }
    }
    
    private var sizeFilters : some View {
        Section(header: Text("FILTER BY WORD SIZE"), footer: Text("")){
            FilterPicker(label: "Equal To", values: numberFilters, selection: $filters.equalTo)
                .filterBadge(show: filters.equalTo != Filters.NOT_SET)
            FilterPicker(label: "More Than", values: numberFilters, selection: $filters.moreThan)
                .filterBadge(show: filters.moreThan != Filters.NOT_SET)
            FilterPicker(label: "Less Than", values: numberFilters, selection: $filters.lessThan)
                .filterBadge(show: filters.lessThan != Filters.NOT_SET)
        }
    }
    
    private var expertFilters : some View {
        return Section(header: Text("EXPERT FILTERS"), footer: Text("To create a pattern use . to represent any letter and @ for 0 or more letters, eg s.r..b.e")){
            TextFilterRow(label: "Pattern", hint: "Enter pattern", text: $filters.pattern)
                .onChange(of: filters.pattern){ oldValue, newValue in
                    if (oldValue != newValue) {
                        self.filters.pattern = keyboard.crossword(typed: newValue)
                    }
                }
                .filterBadge(show: !filters.pattern.isEmpty)
            TextFilterRow(label: "Reg Exp", hint: "Enter regex", text: $filters.regExp)
                .onChange(of: filters.regExp){ oldValue, newValue in
                    if (oldValue != newValue) {
                        self.filters.regExp = keyboard.regEx(typed: newValue)
                    }
                }
                .filterBadge(show: !filters.regExp.isEmpty)
        }
    }

    var body: some View {
        Form {
            status
            letterFilters
            wordFilters
            prefixSuffixFilters
            sizeFilters
            expertFilters
        }
        .scrollDismissesKeyboard(.immediately)
        .navigationTitle(filters.title)
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarIconButton(placement: .topBarLeading, iconName: "chevron.left", action: appVM.goBack)
            ToolbarButton(placement: .topBarTrailing, label: "Apply"){appVM.apply(filters: filters)}
        }
        .navigationBarBackButtonHidden(true)
    }
}
