...
                    Button(action: {self.appVM.lookUpWord(word: match, provider: .MerriamWebster) }){Text("Merriam-Webster")}
                    Button(action: {self.appVM.lookUpWord(word: match, provider: .MWThesaurus) }){Text("M-W Thesaurus")}
                    Button(action: {self.appVM.lookUpWord(word: match, provider: .Thesaurus) }){Text("Thesaurus.com")}
                    Button(action: {self.appVM.lookUpWord(word: match, provider: .Wiktionary) }){Text("Wiktionary")}
                    Button(action: {self.appVM.lookUpWord(word: match, provider: .Wikipedia) }){Text("Wikipedia")}
                    Button(action: {self.appVM.lookUpWord(word: match, provider: .WordGameDictionary) }){Text("Word Game Dictionary")}
                    Button(action: {self.matchesVM.search(word: match)}){Text("Search")}
                }
                .contentShape(Rectangle()) //Ensure row white space is tappable
                .onTapGesture {self.appVM.lookUpWord(word: match)}
        }
    }

...
        .navigationBarTitleDisplayMode(.inline)
        .navigationBarBackButtonHidden(true)
        .toolbar {
            ToolbarIconButton(placement: .topBarLeading, iconName: "chevron.left") {
                appVM.matchesExited(filters: matchesVM.filters)
            }
            ToolbarButton(placement: .topBarTrailing, label: "Filters"){
                appVM.goto(screen: .Filters)
            }
        }
        .sheet(isPresented: $isShareOptionsPresented){
            ActivityViewController(activityItems: matchesVM.share())
        }
...
