...
    }
}

struct MatchRow_Previews: PreviewProvider {
    static var previews: some View {
        Group{
            MatchRow(match: "astronomer", formatter: WordFormatter(), largeFont: false)
        }.previewLayout(.fixed(width: 300, height: 70))
    }
}

