...
                    .foregroundColor(Color("exampleResult"))
                    .padding(.top, 8)
                    .padding(.bottom, 8)
                HStack {
                    Spacer()
                    Button(action: {appVM.showMe(example: tip.showMe)}){
                        Text("SHOW ME")
                            .modifier(ButtonMod())
                    }.buttonStyle(BorderlessButtonStyle())
                }
            }
            .padding(8)
            
...
