//
//  SearchTests.swift
//  AnagramSolverUITests
//
//  Created by Mark Bailey on 04/03/2022.
//  Copyright © 2022 MPD Bailey Technology. All rights reserved.
//

import XCTest

class SearchTests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
        
        //
        //Reset the settings
        //
        let app = XCUIApplication()
        //press settings button
        app.navigationBars.buttons.element(boundBy: 0).tap()
        //press Reset button to ensure settings are in a known state
        app.navigationBars.buttons["Reset"].tap()
        //Accessibility ID can be applied to child elements, so need to use first match
        app.alerts.buttons["dialogResetSettings"].firstMatch.tap()
        //press back button
        app.navigationBars.buttons.element(boundBy: 0).tap()

    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
    
    /// Close Shave is in the phrase list and can be also found via two word anagram search
    /// Test that close shave only appears once
    func testNoDupliucates1() throws {
        let app = XCUIApplication()
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.typeText("cloes-shaev")
        app.navigationBars.buttons["Search"].tap()
        XCTAssertTrue(app.staticTexts["Matches: 446"].waitForExistence(timeout: SEARCH_TIMEOUT))
        XCTAssertTrue(app.staticTexts["close shave"].exists)

        //No check it is not duplicated lower down the list
        //Unfortunately, close shave is scrolled past on iPod and IPhone 13 sim
        for _ in 1...5 {
            app.swipeUp()
            //Use hittable to check for visible elements
            XCTAssertFalse(app.tables.element.staticTexts["close shave"].isHittable)
        }

        //Set up a prefix filter to reduce number of matches
        app.buttons["Filters"].tap()
        //Clear any existing filters
        app.buttons["CLEAR"].tap()
        //Prefix filter is 5th textField (index 4)
        app.swipeUp()
        app.textFields["Enter prefix"].tap()
        app.mpdbUIType(msg: "close")
        app.navigationBars.buttons["Apply"].tap()
        XCTAssertTrue(app.staticTexts["Matches: 3 Filters: 1"].waitForExistence(timeout: SEARCH_TIMEOUT))
    }
    
    func testCrosswordVowel1(){
        let app = XCUIApplication()
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.typeText("gr!!.")
        app.navigationBars.buttons["Search"].tap()
        XCTAssertTrue(app.staticTexts["Matches: 27"].waitForExistence(timeout: SEARCH_TIMEOUT))

    }

    func testCrosswordVowel2(){
        let app = XCUIApplication()
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.typeText("t!!ter@")
        app.navigationBars.buttons["Search"].tap()
        XCTAssertTrue(app.staticTexts["Matches: 13"].waitForExistence(timeout: SEARCH_TIMEOUT))
        XCTAssertTrue(app.staticTexts["teeterboards"].waitForExistence(timeout: SEARCH_TIMEOUT))
    }

    func testCrosswordVowel3(){
        let app = XCUIApplication()
        app.textFields.element.tap()
        app.mpdbDeleteAll()
        app.typeText("moonstarer")
        app.navigationBars.buttons["Search"].tap()
        XCTAssertTrue(app.staticTexts["astronomer"].waitForExistence(timeout: SEARCH_TIMEOUT))

        //Set up filter
        app.buttons["Filters"].tap()
        //Clear any existing filters
        app.buttons["CLEAR"].tap()
        //Pattern filter is 7th textField (index 6)
        app.swipeUp()
        app.swipeUp()
        app.textFields["Pattern"].tap()
        app.typeText(".!!.!!.")
        app.navigationBars.buttons["Apply"].tap()
        XCTAssertTrue(app.staticTexts["Matches: 2 Filters: 1"].waitForExistence(timeout: SEARCH_TIMEOUT))
        XCTAssertTrue(app.staticTexts["searoom (ntr)"].waitForExistence(timeout: SEARCH_TIMEOUT))
        XCTAssertTrue(app.staticTexts["tearoom (nsr)"].waitForExistence(timeout: SEARCH_TIMEOUT))
    }
}
